<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2020 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">WindowSamples</string>
    <string name="current_state">Current state</string>
    <string name="state_update_log">State update log</string>
    <string name="device_state">Device state</string>
    <string name="window_layout">Window layout</string>
    <string name="separating">Separated</string>
    <string name="unknown">Unknown</string>
    <string name="not_separating">Not Separated</string>
    <string name="legend">Legend:</string>
    <string name="content_title">Content title</string>
    <string name="green_droid">Green droid</string>
    <string name="display_features">Display features</string>
    <string name="split_layout">Split layout</string>
    <string name="window_manager_demos">WindowManager Demos</string>
    <string name="hardware_config_select">Hardware configuration to use</string>
    <string name="device_default">Device default</string>
    <string name="short_dimension_fold">Fold in the middle of the window along short
        dimension</string>
    <string name="long_dimension_fold">Fold in the middle of the window along long
        dimension</string>
    <string name="test_activity">Test activity</string>
    <string name="show_all_display_features_description">Show all display features of the device on the screen</string>
    <string name="split_layout_demo_description">Demo of a layout that splits the content to sides of a fold or a hinge. If not present or minimal size requirements are not meant, it behave like a FrameLayout.</string>
    <string name="unknown_legend_color">Unknown Legend Color</string>
    <string name="hinge_legend_color">Hinge Legend Color</string>
    <string name="separating_legend_color">Separating Legend Color</string>
    <string name="screens_are_separated">"Screens are separated"</string>
    <string name="screens_are_not_separated">"Screen is not separated"</string>
    <string name="screen_is_horizontal">"Hinge is horizontal"</string>
    <string name="screen_is_vertical">"Hinge is vertical"</string>
    <string name="window_metrics">Window metrics</string>
    <string name="window_metrics_description">Demo of using WindowMetrics API with activity handling rotations.</string>
    <string name="occlusion_is_full">Occlusion is full</string>
    <string name="occlusion_is_none">Occlusion is none</string>
    <string name="rxJava">RxJava</string>
    <string name="rx_description">Demo of using RxJava to receive updates</string>
    <string name="activity_embedding">Embedded Activity</string>
    <string name="activity_embedding_description">Launch Activity Embedding Demo</string>
</resources>
